Add main content structure with categories and cards to blogs.html

--- a/blogs.html
+++ b/blogs.html
@@ -44,7 +44,90 @@
         </div>
     </nav>
 
-  
+    <main>
+        <div class="container my-4">
+            <div class="row">
+                <div class="col-md-3 d-none d-md-block">
+                    <div class="list-group">
+                        <a href="#" class="list-group-item list-group-item actiob">Category 1</a>
+                        <a href="#" class="list-group-item list-group-item actiob">Category 2</a>
+                        <a href="#" class="list-group-item list-group-item actiob">Category 3</a>
+                        <a href="#" class="list-group-item list-group-item actiob">Category 4</a>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <nav>
+                        <ol class="breadcrumb">
+                          <li class="breadcrumb-item"><a href="#">Home</a></li>
+                          <li class="breadcrumb-item"><a href="#">Library</a></li>
+                          <li class="breadcrumb-item active">Data</li>
+                        </ol>
+                    </nav>
+                    <div class="card mb-2 shadow">
+                        <div class="row">
+                            <div class="col-4">
+                                <img src="img/1.jpeg" alt="" class="img-fluid rounded-start">
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card Title</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam fuga pariatur asperiores veritatis ducimus consequuntur suscipit natus inventore molestias?</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-2 shadow">
+                        <div class="row">
+                            <div class="col-4">
+                                <img src="img/2.jpeg" alt="" class="img-fluid rounded-start">
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card Title</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam fuga pariatur asperiores veritatis ducimus consequuntur suscipit natus inventore molestias?</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-2 shadow">
+                        <div class="row">
+                            <div class="col-4">
+                                <img src="img/3.jpeg" alt="" class="img-fluid rounded-start">
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card Title</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam fuga pariatur asperiores veritatis ducimus consequuntur suscipit natus inventore molestias?</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-2 shadow">
+                        <div class="row">
+                            <div class="col-4">
+                                <img src="img/4.jpeg" alt="" class="img-fluid rounded-start">
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card Title</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam fuga pariatur asperiores veritatis ducimus consequuntur suscipit natus inventore molestias?</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <nav class="my-5">
+                        <ul class="pagination justify-content-end">
+                            <li class="page-item disabled"><a href="#" class="page-link">Previous</a></li>
+                            <li class="page-item"><a href="" class="page-link">1</a></li>
+                            <li class="page-item"><a href="" class="page-link">2</a></li>
+                            <li class="page-item"><a href="" class="page-link">3</a></li>
+                            <li class="page-item"><a href="" class="page-link">Next</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <footer class="py-5 bg-dark text-white">
         <div class="container text-center">
